Update terms and service naming

--- a/source/terms.html.erb
+++ b/source/terms.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Terms of Service & Privacy Policy
+title: ProxyGear - Terms of Service & Privacy Policy
 layout: standard_page
 ---
 <div class="px-4 pt-8 md:pt-16 md:px-16 lg:px-64">
