Fix contact button

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,7 @@ layout: standard_page
     </h1>
     <p class="text-xl pb-1">Ruby on Rails expert delivering<br/> clean, maintainable code since 2010</p>
     <p>
-      <a class="font-bold text-xl hover:text-slate-200" href="script:alert('Send me an email at contact@proxygear.com')">
+      <a class="font-bold text-xl hover:text-slate-200" href="#" onclick="alert('Send me an email at contact@proxygear.com')">
         [ <span class="text-violet-400 hover:text-violet-300">Contact Me</span> ]
       </a>
     </p>
